--- a/imap_processing/cdf/config/imap_codice_global_cdf_attrs.yaml
+++ b/imap_processing/cdf/config/imap_codice_global_cdf_attrs.yaml
@@ -36,9 +36,9 @@ imap_codice_l1a_hi_counters_singles:
 imap_codice_l1a_hi_omni:
     <<: *instrument_base
     Data_level: 1A
-    Data_type: L1A_hi-omni->Level-1A Hi Omni Data
+    Data_type: L1A_hi-omni->Level-1A Hi Omnidirectional Data
     Logical_source: imap_codice_l1a_hi-omni
-    Logical_source_description: IMAP Mission CoDICE Hi Level-1A Omni Data.
+    Logical_source_description: IMAP Mission CoDICE Hi Level-1A Omnidirectional Data.
 
 imap_codice_l1a_hi_sectored:
     <<: *instrument_base
