Updated labelaxis for energy step

--- a/imap_processing/cdf/config/imap_codice_l1a_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_codice_l1a_variable_attrs.yaml
@@ -20,7 +20,7 @@ energy_attrs:
     CATDESC: Energy per charge (E/q) sweeping step
     FIELDNAM: Energy step
     FORMAT: I3
-    LABLAXIS: energy
+    LABLAXIS: energy step
     UNITS: ' '
     VALIDMIN: 0
     VALIDMAX: 127
