Update global attribute YAML to clarify structure

--- a/imap_processing/cdf/config/imap_hi_global_cdf_attrs.yaml
+++ b/imap_processing/cdf/config/imap_hi_global_cdf_attrs.yaml
@@ -1,4 +1,8 @@
-# YAML entries at the root level will overwrite the default global attributes
+# YAML entries at the root level are always returned from the global attribute
+# manager as long as they are defined in the global attribute schema. Instrument
+# level global attributes are thus defined at the root level.
+
+# TODO: remove Data_version. It should be dynamically generated
 Data_version: "001"
 Descriptor: &desc
   Hi>IMAP High-Energy (IMAP-Hi) Energetic Neutral Atom Imager
@@ -11,6 +15,7 @@ TEXT: &txt >
   more details.
 Instrument_type: Particles (space)
 
+# -------------- Product specific global attributes defined below --------------
 imap_hi_l1a_de_attrs:
     Data_level: 1A
     Data_type: L1A_DE>Level-1A Direct Event
