--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,3 +32,7 @@ repos:
       - id: poetry-check
       - id: poetry-lock
         args: [--no-update]
+  - repo: https://github.com/numpy/numpydoc
+    rev: '1.7.0'
+    hooks:
+      - id: numpydoc-validation
