Codice l1a CDF fixes (#617)
* Fixed some issues with l1a attributes
* Updated L0 hskp filename to match the L1 files it produces

--- a/imap_processing/cdf/config/imap_codice_global_cdf_attrs.yaml
+++ b/imap_processing/cdf/config/imap_codice_global_cdf_attrs.yaml
@@ -11,6 +11,7 @@ instrument_base: &instrument_base
     TOF / E system. These measurements are critical in determining the Local Interstellar Medium (LISM) composition and
     flow properties, the origin of the enigmatic suprathermal tails on the solar wind distributions and advance
     understanding of the acceleration of particles in the heliosphere.
+  Instrument_type: Particles (space)
 
 imap_codice_l1a_hskp:
     <<: *instrument_base
