--- a/imap_processing/cdf/config/imap_hi_global_cdf_attrs.yaml
+++ b/imap_processing/cdf/config/imap_hi_global_cdf_attrs.yaml
@@ -25,3 +25,9 @@ imap_hi_l1b_de_attrs:
     Data_type: L1B_DE>Level-1B Direct Event
     Logical_source: imap_hi_l1b_{sensor}-de
     Logical_source_description: IMAP-Hi Instrument Level-1B Direct Event Data.
+
+imap_hi_l1c_pset_attrs:
+    Data_level: 1C
+    Data_type: L1C_PSET>Level-1C Pointing Set
+    Logical_source: imap_hi_l1c_{sensor}-pset
+    Logical_source_description: IMAP-Hi Instrument Level-1C Pointing Set Data.
