--- a/imap_processing/cdf/config/imap_codice_global_cdf_attrs.yaml
+++ b/imap_processing/cdf/config/imap_codice_global_cdf_attrs.yaml
@@ -5,12 +5,12 @@ instrument_base: &instrument_base
     The Compact Dual Ion Composition Experiment (CoDICE) will measure the distributions and composition of interstellar
     pickup ions (PUIs), particles that make it through the heliosheath into the heliosphere. CoDICE also collects and
     characterizes solar wind ions including the mass and composition of highly energized particles (called suprathermal)
-    from the Sun. CoDICE combines an electrostatic analyzer(ESA) with a Time-Of-Flight versus Energy (TOF / E) subsystem
-    to simultaneously measure the velocity, arrival direction, ionic charge state, and mass of specific species of ions in
-    the LISM. CoDICE also has a path for higher energy particles to skip the ESA but still get measured by the common
-    TOF / E system. These measurements are critical in determining the Local Interstellar Medium (LISM) composition and
-    flow properties, the origin of the enigmatic suprathermal tails on the solar wind distributions and advance
-    understanding of the acceleration of particles in the heliosphere.
+    from the Sun. CoDICE combines an electrostatic analyzer (ESA) with a Time-Of-Flight versus Energy (TOF / E)
+    subsystem to simultaneously measure the velocity, arrival direction, ionic charge state, and mass of specific
+    species of ions in the LISM. CoDICE also has a path for higher energy particles to skip the ESA but still get
+    measured by the common TOF / E system. These measurements are critical in determining the Local Interstellar Medium
+    (LISM) composition and flow properties, the origin of the enigmatic suprathermal tails on the solar wind
+    distributions and advance understanding of the acceleration of particles in the heliosphere.
   Instrument_type: Particles (space)
 
 # L1a
