Fixed some bugs in cdf attribute values; udpated TODOs

--- a/imap_processing/cdf/config/imap_codice_l1a_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_codice_l1a_variable_attrs.yaml
@@ -50,6 +50,8 @@ energy_label:
     VAR_TYPE: metadata
 
 # <=== Dataset Attributes ===>
+# TODO: resolve ISTP warning: Width of F10 FORMAT may be insufficient for
+#       values.  Adjust FORMAT or VALIDMIN/VALIDMAX value to resolve.
 acquisition_times_attrs:
     <<: *default
     CATDESC: Time of acquisition for the energy step
