--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,5 +108,5 @@ initial-content = """
 """
 [tool.numpydoc_validation]
 checks = ["all", "EX01", "SA01", "ES01" ] # report on all checks, except the following
-exclude = ['__init__', 'tests' ] # don't report on objects that match any of these regex
+exclude = ['__init__' ] # don't report on objects that match any of these regex
 
