--- a/imap_processing/cdf/config/imap_codice_l1b_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_codice_l1b_variable_attrs.yaml
@@ -71,10 +71,12 @@ counters_attrs: &counters
     DEPEND_1: energy
     DISPLAY_TYPE: time_series
     FIELDNAM: Fill in at creation
+    FILLVAL: 1.7976931348623157e+308
+    FORMAT: F10.3
     LABL_PTR_1: energy_label
-    UNITS: counts
+    UNITS: rates
     VALIDMIN: 0
-    VALIDMAX: 8388607  # max value for a signed 24-bit integer
+    VALIDMAX: 1.7976931348623157e+308
 
 esa_sweep_attrs:
     <<: *default
@@ -112,63 +114,63 @@ hi_counters_singles-stssd:
 # hi-omni
 hi_omni-h:
     <<: *counters
-    CATDESC: Omnidirectional H Counts
+    CATDESC: Omnidirectional H Rates
     FIELDNAM: H
 
 hi_omni-he3:
     <<: *counters
-    CATDESC: Omnidirectional He3 Counts
+    CATDESC: Omnidirectional He3 Rates
     FIELDNAM: He3
 
 hi_omni-he4:
     <<: *counters
-    CATDESC: Omnidirectional He4 Counts
+    CATDESC: Omnidirectional He4 Rates
     FIELDNAM: He4
 
 hi_omni-c:
     <<: *counters
-    CATDESC: Omnidirectional C Counts
+    CATDESC: Omnidirectional C Rates
     FIELDNAM: C
 
 hi_omni-o:
     <<: *counters
-    CATDESC: Omnidirectional O Counts
+    CATDESC: Omnidirectional O Rates
     FIELDNAM: O
 
 hi_omni-ne_mg_si:
     <<: *counters
-    CATDESC: Omnidirectional Ne_Mg_Si Counts
+    CATDESC: Omnidirectional Ne_Mg_Si Rates
     FIELDNAM: Ne_Mg_Si
 
 hi_omni-fe:
     <<: *counters
-    CATDESC: Omnidirectional Fe Counts
+    CATDESC: Omnidirectional Fe Rates
     FIELDNAM: Fe
 
 hi_omni-uh:
     <<: *counters
-    CATDESC: Omnidirectional UH Counts
+    CATDESC: Omnidirectional UH Rates
     FIELDNAM: UH
 
 # hi-sectored
 hi_sectored-h:
     <<: *counters
-    CATDESC: Sectored H Counts
+    CATDESC: Sectored H Rates
     FIELDNAM: H
 
 hi_sectored-he3he4:
     <<: *counters
-    CATDESC: Sectored He3He4 Counts
+    CATDESC: Sectored He3He4 Rates
     FIELDNAM: He3He4
 
 hi_sectored-cno:
     <<: *counters
-    CATDESC: Sectored CNO Counts
+    CATDESC: Sectored CNO Rates
     FIELDNAM: CNO
 
 hi_sectored-fe:
     <<: *counters
-    CATDESC: Sectored Fe Counts
+    CATDESC: Sectored Fe Rates
     FIELDNAM: Fe
 
 # lo-counters-aggregated
