--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,4 +37,4 @@ repos:
     hooks:
       - id: numpydoc-validation
         exclude: '^imap_processing/tests/|^imap_processing/swe/|^imap_processing/swapi/|^imap_processing/mag/|^imap_processing/lo/|^imap_processing/idex/|^imap_processing/ialirt/|^imap_processing/hit/|^imap_processing/hi/|^imap_processing/codice/|^imap_processing/glows/|^imap_processing/cdf/'
-
+        # Will need to remove exclude section once all numpydoc changes are made.
