Add hi_l1b_hk global attributes to imap_hi_global_cdf_attrs.yaml Convert l1b hk to use CDF attribute manager Move Logical_source update to common l1b location Update test value for l1b_hk Logical_source

--- a/imap_processing/cdf/config/imap_hi_global_cdf_attrs.yaml
+++ b/imap_processing/cdf/config/imap_hi_global_cdf_attrs.yaml
@@ -26,6 +26,12 @@ imap_hi_l1b_de_attrs:
     Logical_source: imap_hi_l1b_{sensor}-de
     Logical_source_description: IMAP-Hi Instrument Level-1B Direct Event Data.
 
+imap_hi_l1b_hk_attrs:
+    Data_level: 1B
+    Data_type: L1B_HK>Level-1B Housekeeping
+    Logical_source: imap_hi_l1b_{sensor}-hk
+    Logical_source_description: IMAP-Hi Instrument Level-1B Housekeeping Data.
+
 imap_hi_l1c_pset_attrs:
     Data_level: 1C
     Data_type: L1C_PSET>Level-1C Pointing Set
