--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,3 +32,12 @@ repos:
       - id: poetry-check
       - id: poetry-lock
         args: [--no-update]
+  - repo: https://github.com/numpy/numpydoc
+    rev: 'v1.7.0'
+    hooks:
+      - id: numpydoc-validation
+        exclude: '^tools/|^imap_processing/tests/|.*test.*|^imap_processing/swe|^imap_processing/mag|^imap_processing/lo|^imap_processing/idex|^imap_processing/ialirt|^imap_processing/hit|^imap_processing/hi|^imap_processing/glows|^imap_processing/codice|^imap_processing/utils.py|^imap_processing/decom.py|^imap_processing/cli.py|^imap_processing/cdf/|^imap_processing/ccsds/'
+        # Will need to remove exclude section once all numpydoc changes are made.
+        #This is only testing the swe none test files.
+        #What will be excluded at very end: '^imap_processing/tests/|.*test.*'
+
