--- a/imap_processing/cdf/tests/imap_test_variable.yaml
+++ b/imap_processing/cdf/tests/imap_test_variable.yaml
@@ -22,4 +22,15 @@ test_field_1:
   REFERENCE_POSITION: test_reference_position
   NOT_REQUIRED: test_not_required
 
-  # TODO: come back to format
+test_field_2:
+  <<: *default
+  CATDESC: test time 2
+  FIELDNAM: test_field_2
+  LABLAXIS: test_labaxis_2
+  UNITS: test_units_2
+  VAR_TYPE: test_variable_type_2
+  SCALETYP: test_scaletyp_2
+  MONOTON: test_monoton_2
+  TIME_BASE: 11
+  TIME_SCALE: test_time_scale_2
+  REFERENCE_POSITION: test_reference_position_2
