Add numpydoc Pre-Commit Hook Pt.1 (#639)
* numpydoc

* numpydoc

* numpydoc

* numpydoc

* numpydoc update

* numpydoc update

* numpydoc update

* numpydoc update

* numpydoc update

* numpydoc update

* numpydoc update

* numpydoc update

* xtce docstring reformat

* small change

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,3 +107,11 @@ initial-content = """
   __version__ = "0.0.0"
   __version_tuple__ = (0, 0, 0)
 """
+
+[tool.numpydoc_validation]
+checks = ["all", #report on all checks, except the following
+    "EX01", # Ignore No examples section found
+    "SA01", # Ignore See Also section not found
+    "ES01", # Ignore No extended summary found
+    "RT02" ] # Ignore The first line of the Returns section
+exclude = ['__init__' ] # don't report on objects that match any of these regex
