Add numpydoc Pre-Commit For ialirt &  idex Pt.5 (#647)
* numpydoc for ialirt and idex

* numpydoc for ialirt and idex

* precommit update

* numpydoc update idex

* numpydoc ialirt update

* Update imap_processing/ialirt/l0/decom_ialirt.py

Co-authored-by: Matthew Bourque <Matthew.Bourque@lasp.colorado.edu>

---------

Co-authored-by: Matthew Bourque <Matthew.Bourque@lasp.colorado.edu>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,5 +36,5 @@ repos:
     rev: 'v1.7.0'
     hooks:
       - id: numpydoc-validation
-        exclude: '^imap_processing/tests/|.*test.*|^imap_processing/idex|^imap_processing/ialirt|^imap_processing/hit|^imap_processing/hi|^imap_processing/glows|^imap_processing/codice'
+        exclude: '^imap_processing/tests/|.*test.*|^imap_processing/hit|^imap_processing/hi|^imap_processing/glows|^imap_processing/codice'
         # Will need to remove exclude section once all numpydoc changes are made.
