--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,5 +36,5 @@ repos:
     rev: 'v1.7.0'
     hooks:
       - id: numpydoc-validation
-        exclude: '^imap_processing/tests/|.*test.*|^imap_processing/glows|^imap_processing/codice'
-        # Will need to remove exclude section once all numpydoc changes are made.
+        exclude: '^imap_processing/tests/|.*test.*'
+
