mypy for tools folder

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,3 +115,7 @@ checks = ["all", #report on all checks, except the following
     "ES01", # Ignore No extended summary found
     "RT02" ] # Ignore The first line of the Returns section
 exclude = ['__init__' ] # don't report on objects that match any of these regex
+
+[tool.mypy]
+explicit_package_bases = true
+disallow_subclassing_any = true
