--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,4 +37,15 @@ repos:
     hooks:
       - id: numpydoc-validation
         exclude: '^imap_processing/tests/|.*test.*'
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: 'v1.10.0'
+    hooks:
+      - id: mypy
+        args: [ --strict,
+                --disable-error-code, import-untyped,
+                --disable-error-code, import-not-found,
+                --disable-error-code, no-untyped-call ]
+        exclude: '^imap_processing/'
+        # '^docs/source/conf.py|^tools/|.*test.*'
+
 
