--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,11 +41,8 @@ repos:
     rev: 'v1.10.0'
     hooks:
       - id: mypy
-        args: [ --strict,
+        pass_filenames: false
+        args: [., --strict, --explicit-package-bases,
                 --disable-error-code, import-untyped,
                 --disable-error-code, import-not-found,
                 --disable-error-code, no-untyped-call ]
-        exclude: '^imap_processing/|^docs/source/conf.py'
-        # '^docs/source/conf.py|^tools/|.*test.*'
-
-
