--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,5 +117,5 @@ checks = ["all", #report on all checks, except the following
 exclude = ['__init__' ] # don't report on objects that match any of these regex
 
 [tool.mypy]
-explicit_package_bases = true
-disallow_subclassing_any = true
+follow_imports = 'skip'
+exclude = ["tests", "docs", "imap_processing"]
