exclude type-arg check for list and dict

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,4 +45,5 @@ repos:
         args: [., --strict, --explicit-package-bases,
                 --disable-error-code, import-untyped,
                 --disable-error-code, import-not-found,
-                --disable-error-code, no-untyped-call ]
+                --disable-error-code, no-untyped-call,
+                --disable-error-code, type-arg]
