Added DEPEND_i case

--- a/imap_processing/cdf/tests/imap_test_variable.yaml
+++ b/imap_processing/cdf/tests/imap_test_variable.yaml
@@ -22,6 +22,7 @@ test_field_1:
   REFERENCE_POSITION: test_reference_position
   LEAP_SECONDS_INCLUDED: test_not_required
   DEPEND_1: test_depend_1
+  DEPEND_2: test_depend_2
 
 test_field_2:
   <<: *default
