--- a/imap_processing/cdf/config/imap_glows_l1a_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_glows_l1a_variable_attrs.yaml
@@ -55,7 +55,7 @@ histogram_attrs:
   UNITS: counts
   VAR_TYPE: data
 
-metadata_attrs:
+metadata_attrs: &metadata_attrs
   DEPEND_0: epoch
   VALIDMIN: 0
   VALIDMAX: 1000000000
@@ -66,177 +66,221 @@ metadata_attrs:
   LABLAXIS: Metadata
 
 flight_software_version:
+  <<: *metadata_attrs
   CATDESC: Flight software version
   FIELDNAM: Flight software version
 
 ground_software_version:
+  <<: *metadata_attrs
   CATDESC: Ground software version in the format vXXX
   FIELDNAM: Ground software version
 
 pkts_file_name:
+  <<: *metadata_attrs
   CATDESC: Input filename for packets data
   FIELDNAM: Input filename
 
 seq_count_in_pkts_file:
+  <<: *metadata_attrs
   CATDESC: Sequence counter from packet
   FIELDNAM: Sequence counter
 
 last_spin_id:
+  <<: *metadata_attrs
   CATDESC: The ID of the last spin in the block
   FIELDNAM: Last spin ID
 
 imap_start_time:
+  <<: *metadata_attrs
   CATDESC: Start time of the block, in seconds, in IMAP spacecraft clock time
   FIELDNAM: Start time in seconds in IMAP time
 
 imap_time_offset:
+  <<: *metadata_attrs
   CATDESC: End time of the block, in seconds, in IMAP spacecraft clock time
   FIELDNAM: End time in seconds in IMAP time
 
 glows_start_time:
+  <<: *metadata_attrs
   CATDESC: Start time of the block, in seconds, in GLOWS clock time
   FIELDNAM: Start time in seconds in GLOWS time
 
 glows_time_offset:
+  <<: *metadata_attrs
   CATDESC: End time of the block, in seconds, in GLOWS clock time
   FIELDNAM: End time in seconds in GLOWS time
 
 flags_set_onboard:
+  <<: *metadata_attrs
   CATDESC: Flags for bad data [missing PPS, missing time, missing spin phase, missing spin periods, overexposure, nonmonotonic event, data collected at night, HV test, pulse test, memory error]
   FIELDNAM: Flags for missing or bad data
 
 is_generated_on_ground:
+  <<: *metadata_attrs
   CATDESC: Indicates if the histogram data was generated on the ground
   FIELDNAM: Histogram data generated on ground
 
 number_of_spins_per_block:
+  <<: *metadata_attrs
   CATDESC: Number of spins per block
   FIELDNAM: Number of spins per block
 
 number_of_spins_per_histogram:
+  <<: *metadata_attrs
   CATDESC: Number of histogram bins
   FIELDNAM: Number of histogram bins
 
 numer_of_events:
+  <<: *metadata_attrs
   CATDESC: Total number of events or counts in the histogram
   FIELDNAM: Total number of histogram events
 
 filter_temperature_average:
+  <<: *metadata_attrs
   CATDESC: Filter temperature, averaged per block, and unit " "encoded
   FIELDNAM: Average filter temperature, unit encoded
 
 filter_temperature_variance:
+  <<: *metadata_attrs
   CATDESC: Filter temperature variance, per block, and unit " "encoded.
   FIELDNAM: Uint encoded filter temperature variance
 
 hv_voltage_average:
+  <<: *metadata_attrs
   CATDESC: block averaged HV voltage on the CEM, uint encoded
   FIELDNAM: Uint encoded average HV voltage
 
 hv_voltage_variance:
+  <<: *metadata_attrs
   CADESC: variance of  HV voltage on the CEM, uint encoded
   FIELDNAM: Uint encoded HV voltage variance
 
 spin_period_average:
+  <<: *metadata_attrs
   CATDESC: Block averaged spin period, uint encoded
   FIELDNAM: Average spin period, uint encoded
 
 spin_period_variance:
+  <<: *metadata_attrs
   CATDESC: Variance of spin period, uint encoded
   FIELDNAM: Variance of spin period, uint encoded
 
 pulsa_length_average:
+  <<: *metadata_attrs
   CATDESC: Block averaged impulse length, uint encoded
   FIELDNAM: Block averaged impulse length, uint encoded
 
 pulse_length_variance:
+  <<: *metadata_attrs
   CATDESC: Variance of impulse length, uint encoded
   FIELDNAM: Variance of impulse length, uint encoded
 
 imap_sclk_last_pps:
+  <<: *metadata_attrs
   CATDESC: IMAP seconds for last PPS
   FIELDNAM: IMAP seconds for last PPS
 
 glows_sclk_last_pps:
+  <<: *metadata_attrs
   CATDESC: GLOWS seconds for last PPS
   FIELDNAM: GLOWS seconds for last PPS
 
 glows_ssclk_last_pps:
+  <<: *metadata_attrs
   CATDESC: GLOWS subseconds for last PPS, with a max of 2000000
   FIELDNAM: GLOWS subseconds for last PPS
 
 imap_sclk_next_pps:
+  <<: *metadata_attrs
   CATDESC: IMAP seconds for next PPS
   FIELDNAM: IMAP seconds for next PPS
 
 catbed_heater_active:
+  <<: *metadata_attrs
   CATDESC: Indicates if the heater is active
   FIELDNAM: Heater active flag
 
 spin_period_valid:
+  <<: *metadata_attrs
   CATDESC: indicates if the spin phase is valid
   FIELDNAM: valid spin phase flag
 
 spin_phase_at_next_pps_valid:
+  <<: *metadata_attrs
   CATDESC: Indicates if the spin phase at next PPS is valid
   FELDNAM: Spin phase at next PPS is valid
 
 spin_period_source:
+  <<: *metadata_attrs
   CATDESC: Flag - Spin period source
   FIELDNAM: Flag - Spin period source
 
 spin_period:
+  <<: *metadata_attrs
   CATDESC: Uint encoded spin period value
   FIELDNAM: Uint encoded spin period value
 
 spin_phase_at_next_pps:
+  <<: *metadata_attrs
   CATDESC: Uint encoded next spin phase value
   FIELDNAM: Uint encoded next spin phase value
 
 number_of_completed_spins:
+  <<: *metadata_attrs
   CATDESC: Number of spins, from onboard
   FIELDNAM: Number of spins, from onboard
 
 filter_temperature:
+  <<: *metadata_attrs
   CATDESC: Uint encoded temperature
   FIELDNAM: Uint encoded temperature
 
 hv_voltage:
+  <<: *metadata_attrs
   CATDESC: Uint encoded voltage
   FIELDNAM: Uint encoded voltage
 
 glows_time_on_pps_valid:
+  <<: *metadata_attrs
   CATDESC: Indicates if the glows time is valid
   FIELDNAM: Flag - is glows time valid
 
 time_status_valid:
+  <<: *metadata_attrs
   CATDESC: Flag - valid time status
   FIELDNAM: Flag - valid time status
 
 housekeeping_valid:
+  <<: *metadata_attrs
   CATDESC: Flag - valid housekeeping
   FIELDNAM: Flag - valid housekeeping
 
 is_pps_autogenerated:
+  <<: *metadata_attrs
   CATDESC: Indicates if PPS is autogenerated
   FIELDNAM: Indicates if PPS is autogenerated
 
 hv_test_in_progress:
+  <<: *metadata_attrs
   CATDESC: Flag
   FIELDNAM: Flag
 
 pulse_test_in_progress:
+  <<: *metadata_attrs
   CATDESC: FLag
   FIELDNAM: Flag
 
 memory_error_detected:
+  <<: *metadata_attrs
   CATDESC: Flag
   FIELDNAM: Flag
 
 number_of_de_packets:
+  <<: *metadata_attrs
   CATDESC: Number of DE packets
   FIELDNAM: Number of DE packets
 
 missing_packet_sequences:
+  <<: *metadata_attrs
   CATDESC: Missing packet sequence numbers
   FIELDNAM: Missing packet sequences
