Add mypy Pre-commit for swapi Pt.5 (#667)
* mypy check set up for swapi

* mypy update for swapi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,4 +119,4 @@ exclude = ['__init__' ] # don't report on objects that match any of these regex
 
 [tool.mypy]
 follow_imports = 'skip'
-exclude = ["tests", "docs", "swapi", "mag", "lo", "idex", "ialirt", "hit", "hi", "glows", "codice" ]
+exclude = ["tests", "docs", "mag", "lo", "idex", "ialirt", "hit", "hi", "glows", "codice" ]
